# cli-music-player

./: Cargo.toml  README.md
src/: main.rs
