[package]
name = "cli-music-player"
version = "0.1.0"
edition = "2024"

[dependencies]
rodio = "0.17"
ratatui = "0.26"
crossterm = "0.27"
walkdir = "2"
mp3-duration = "0.1"
id3 = "1"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rand = "0.8"
rustfft = "6"